[project]
name = "volo-ai-backend"
version = "1.0.0"
description = "VOLO AI - Hospitality Marketplace Backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[argon2]>=1.7.4",
    "python-multipart>=0.0.6",
    "httpx>=0.26.0",
    "redis>=5.0.0",
    "celery[redis]>=5.3.0",
    "anthropic>=0.18.0",
    "boto3>=1.34.0",
    "elasticsearch[async]>=8.12.0",
    "cryptography>=42.0.0",
    "phonenumbers>=8.13.0",
    "pillow>=10.2.0",
    "aiofiles>=23.2.0",
    "jinja2>=3.1.0",
    "weasyprint>=60.0",
    "stripe>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

